--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,13 @@
-blinker==1.6.2
+blinker==1.8.2
 click==8.1.7
-Flask==2.3.3
-GeoAlchemy2==0.14.1
-greenlet==2.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-packaging==23.1
-postgres==4.0
-psycopg2==2.9.9
+flask==3.0.3
+geoalchemy2==0.15.2
+greenlet==3.1.1
+itsdangerous==2.2.0
+jinja2==3.1.4
+markupsafe==2.1.5
+packaging==24.1
 psycopg2-binary==2.9.9
-psycopg2-pool==1.2
-SQLAlchemy==2.0.20
-typing_extensions==4.7.1
-Werkzeug==2.3.7
+sqlalchemy==2.0.35
+typing-extensions==4.12.2
+werkzeug==3.0.4
