--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-blinker==1.8.2
-click==8.1.7
-flask==3.0.3
-geoalchemy2==0.15.2
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
+GeoAlchemy2==0.17.0
 greenlet==3.1.1
 itsdangerous==2.2.0
-jinja2==3.1.4
-markupsafe==2.1.5
-packaging==24.1
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.35
-typing-extensions==4.12.2
-werkzeug==3.0.4
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+packaging==24.2
+psycopg2-binary==2.9.10
+SQLAlchemy==2.0.37
+typing_extensions==4.12.2
+Werkzeug==3.1.3
